# openmp-parallel-implementation

./: CMakeLists.txt
cmake/: build_test_executable.cmake
gtest/src/: s0_omp_parallel_algorithms_test.cpp
include/public/: s0_parallel_algorithms_openmp.hpp
